--- a/index.html
+++ b/index.html
@@ -59,5 +59,12 @@
     </main>
 
     <!-- Agregar footer con mi nombre y el año [Luis Mario Bonilla Madera | 2024]-->
+    <footer>
+        <section class="desarrollador" role="Nombre del desarrollador de esta página, y el año en que se desarrollo.">
+            
+            <p id="desarrollador"><b>Desarrollado por:</b> Luis Mario Bonilla Madera</p>
+            <p id="year"><b>Año:</b> 2024</p>
+        </section>
+    </footer>
 </body>
 </html>
