Modificación de la responsibilidad de la página.

--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
         <h1 id="titulo-principal">Encriptador de Texto Web | Challenge ONE</h1>
     </header>
     
-    <nav id="menu-idiomas">
-        <section>
-            <button class="idioma" onclick="cambiar_idioma(this)">ES</button>
-            <button class="idioma" onclick="cambiar_idioma(this)">EN</button>
-            <button class="idioma" onclick="cambiar_idioma(this)">PT</button>
-        </section>
-    </nav>
-
+    <section id="menu-idiomas">
+        <nav>
+            <section>
+                <button class="idioma" onclick="cambiar_idioma(this)">ES</button>
+                <button class="idioma" onclick="cambiar_idioma(this)">EN</button>
+                <button class="idioma" onclick="cambiar_idioma(this)">PT</button>
+            </section>
+        </nav>
+    </section>
+        
     <main>
         <section id="interacion-usuario">
             <textarea id="texto-entrada" wrap="soft" placeholder="Ingrese el texto aquí">Lorem ipsum dolor sit amet consectetur adipiscing elit Orci montes sit et diam risus scelerisque vitae est Tortor maecenas nunc ut laoreet Eget diam mauris quam quisque ut eget fringilla sit elit Libero sodales duis fames id diam feugiat aliquet non egestas</textarea>
