Página completamente funcional, adaptado para dispositivos de escritorio o laptops.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
     <main>
         <section id="interacionUsuario">
-            <textarea id="textoEntrada" wrap="soft" placeholder="Ingrese el texto aquí">Lorem ipsum dolor sit amet consectetur adipiscing elit Orci montes sit et diam risus scelerisque vitae est Tortor maecenas nunc ut laoreet Eget diam mauris quam quisque ut eget fringilla sit elit Libero sodales duis fames id diam feugiat aliquet non egestas</textarea>
+            <textarea id="textoEntrada" wrap="soft" placeholder="Ingrese el texto aquí"></textarea>
             <aside id="precaucion">
                 <img id="imgPrecaucion" src="img/warning-circle.png" alt="Pequeño círculo con símbolo de exclamación centrado.">
                 <p id="textoPrecaucion">Solo letras minúsculas y sin acentos</p>
@@ -49,7 +49,7 @@
 
         <section id="resultados">
             <article id="resultado" style="display: none;">
-                <textarea id="textoSalida" wrap="soft" placeholder="Visualización del resultado" readonly>Prueba</textarea>
+                <textarea id="textoSalida" wrap="soft" placeholder="Visualización del resultado" readonly></textarea>
                 <button class="boton" id="botonCopiar" onclick="copiarPortapapeles()">Copiar</button>
             </article>
 
