--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de Texto Web | Challenge ONE</title>
+
+    <!-- Conexión a los archivos CSS -->
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 
@@ -12,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
+    <!-- Conexión al archivo JS -->
     <script src="script.js"></script>
 </head>
 <body>
@@ -63,7 +66,6 @@
 
     <footer>
         <section class="desarrollador">
-            
             <p id="desarrollador"><b>Desarrollado por:</b> Luis Mario Bonilla Madera</p>
             <p id="year"><b>Año:</b> 2024</p>
         </section>
