Finalización del desafío del encriptador de texto web, propuesto por Alura LATAM, en colaboración con Oracle Next Education.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
         </section>
 
         <h1 id="tituloPrincipal">Encriptador de Texto Web | Challenge ONE</h1>
+        
+        <section id="menu" onclick="verMenuIdiomas()">
+            <span id="primera"></span>
+            <span></span>
+            <span id="tercera"></span>
+        </section>
     </header>
     
+
     <section id="menuIdiomas">
         <nav>
             <section>
